# carbon-home-watcher

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
carbonhomewatcher/: admin.py  apps.py  forms.py  models.py  services.py  tables.py  urls.py  views.py
carbonhomewatcher/migrations/: 0001_initial.py
carbonhomewatcher/templates/: appliance_toggle.html  base.html  home.html
carbonhomewatcher/templates/partials/: appliance_created_alert.html  appliance_form.html  appliance_table.html
webappconf/: asgi.py  settings.py  urls.py  wsgi.py
